# small-backend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.kerno/: Dockerfile  docker-compose.yaml
.kerno/scenarios/endpoints/_/GET/: plan.yaml
.kerno/scenarios/endpoints/_/GET/get_items_returns_list/: implementation-notes.md  scenario.yaml
.kerno/scenarios/endpoints/_/GET/get_items_skip_beyond_available/: implementation-notes.md  scenario.yaml
.kerno/scenarios/endpoints/_/GET/get_items_with_pagination/: implementation-notes.md  scenario.yaml
.kerno/scenarios/endpoints/_get-token/POST/: plan.yaml
.kerno/scenarios/endpoints/_get-token/POST/empty_username_behavior/: implementation-notes.md  scenario.yaml
.kerno/scenarios/endpoints/_get-token/POST/missing_username_returns_validation_error/: implementation-notes.md  scenario.yaml
.kerno/scenarios/endpoints/_get-token/POST/valid_username_returns_token/: implementation-notes.md  scenario.yaml
.kerno/scenarios/endpoints/_health/GET/: plan.yaml
.kerno/scenarios/endpoints/_health/GET/health_check_returns_ok/: implementation-notes.md  scenario.yaml
.kerno/scenarios/endpoints/_version/GET/: plan.yaml
app/: main.py
app/api/v1/: api.py
app/api/v1/endpoints/: items.py  utils.py
app/core/: config.py  security.py
app/schemas/: item.py  msg.py
helm/small-backend/: Chart.yaml  values.yaml
helm/small-backend/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
tests/: conftest.py  test_jwt.py  test_main.py
(+2 files in other folders)
